--- a/homework/functions.ipynb
+++ b/homework/functions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,27 +14,24 @@
     "\n",
     "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
     "from statsmodels.tsa.stattools import acf, pacf  #  type: ignore\n",
-    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf  #  type: ignore\n",
-    "  "
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf  #  type: ignore"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def load_data():\n",
     "    df = pd.read_csv(\"../files/input/sutter.csv\")\n",
     "    df = df.set_index(\"date\")\n",
-    "    return df\n",
-    "  "
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,16 +63,16 @@
     "    plt.yticks(fontsize=8)\n",
     "    plt.xticks(fontsize=8)\n",
     "    plt.legend()\n",
-    "    plt.show()\n",
-    "    "
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def acf_pacf_plots(z):\n",
     "    \"\"\"Correlation plot.\"\"\"\n",
     "\n",
@@ -100,40 +97,37 @@
     "    plt.subplot(1, 2, 2)\n",
     "    plot_pacf(z, lags=24, ax=plt.gca(), color=\"k\")\n",
     "    format_plot()\n",
-    "    "
+    "\n",
+    "\n",
+    "    plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "def add_linear_trend_component(df):\n",
     "    \"\"\"Add linear trend component to the dataframe.\"\"\"\n",
     "    df = df.assign(trend=list(range(len(df))))\n",
-    "    return df\n",
-    "\n",
-    "\n"
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "def add_month_component(df):\n",
     "    df = df.assign(month=df.index.str[5:7].astype(int))\n",
-    "    return df\n",
-    "  \n",
-    "  "
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,18 +143,16 @@
     "    X_test = df[x_columns].iloc[-24:]\n",
     "    y_test = df[y_column].iloc[-24:]\n",
     "\n",
-    "    return X_complete, y_complete, X_train, y_train, X_test, y_test\n",
-    "  \n",
-    "  \n",
-    "  "
+    "    return X_complete, y_complete, X_train, y_train, X_test, y_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "\n",
     "def save_forecasts(df):\n",
     "    \"\"\"Save forecasts to a csv file.\"\"\"\n",
@@ -180,16 +172,13 @@
     "\n",
     "    if \"yt_true\" not in forecasts.columns:\n",
     "        forecasts[\"yt_true\"] = df[\"yt_true\"].values\n",
-    "        \n",
     "\n",
-    "    forecasts.to_csv(\"../files/output/forecasts.csv\", index=True)\n",
-    "    \n",
-    "    "
+    "    forecasts.to_csv(\"../files/output/forecasts.csv\", index=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,17 +232,65 @@
     "\n",
     "    results = results.round(2)\n",
     "\n",
-    "    return results\n",
-    "  \n",
-    "  "
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_sin_cos_components(df):\n",
+    "\n",
+    "    df = df.assign(sin_12m=np.sin(2 * np.pi * df.month / 12))\n",
+    "    df = df.assign(cos_12m=np.cos(2 * np.pi * df.month / 12))\n",
+    "\n",
+    "    df = df.assign(sin_6m=np.sin(2 * np.pi * df.month / 6))\n",
+    "    df = df.assign(cos_6m=np.cos(2 * np.pi * df.month / 6))\n",
+    "\n",
+    "    df = df.assign(sin_4m=np.sin(2 * np.pi * df.month / 4))\n",
+    "    df = df.assign(cos_4m=np.cos(2 * np.pi * df.month / 4))\n",
+    "\n",
+    "    df = df.assign(sin_3m=np.sin(2 * np.pi * df.month / 3))\n",
+    "    df = df.assign(cos_3m=np.cos(2 * np.pi * df.month / 3))\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_lagged_ts(df, p_max, y_column, fmt=\"lagged_{}m\"):\n",
+    "    for i in range(1, p_max + 1):\n",
+    "        df[fmt.format(i)] = df[y_column].shift(i)\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_yt_true_scaled(df, scaler):\n",
+    "    df[\"yt_true_scaled\"] = scaler.fit_transform(df[[\"yt_true\"]])\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_trend_and_cycle(df, yt_true_name=\"yt_true\"):\n",
+    "    df[yt_true_name + \"_d1d12\"] = df[yt_true_name].diff(1).diff(12)\n",
+    "    return df"
+   ]
   }
  ],
  "metadata": {
