--- a/homework/functions.ipynb
+++ b/homework/functions.ipynb
@@ -291,6 +291,54 @@
     "    df[yt_true_name + \"_d1d12\"] = df[yt_true_name].diff(1).diff(12)\n",
     "    return df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Bibliotecas agregas por mi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from statsmodels.tsa.stattools import adfuller\n",
+    "from statsmodels.graphics.tsaplots import plot_acf, plot_pacf\n",
+    "import matplotlib.pylab as plt\n",
+    "\n",
+    "def test_stationarity(timeseries):\n",
+    "    print('Resultados del test de Dickey-Fuller:')\n",
+    "    dftest = adfuller(timeseries, autolag='AIC')\n",
+    "    dfoutput = pd.Series(dftest[0:4], index=['Test Statistic','p-value','#Lags Used','Number of Observations Used'])\n",
+    "    for key,value in dftest[4].items():\n",
+    "        dfoutput['Critical Value (%s)'%key] = value\n",
+    "    print(dfoutput)\n",
+    "\n",
+    "def plot_acf_pacf(ts_diff):\n",
+    "    fig = plt.figure(figsize=(12, 8))\n",
+    "    ax1 = fig.add_subplot(211)\n",
+    "    fig = plot_acf(ts_diff, lags=40, ax=ax1)\n",
+    "    ax2 = fig.add_subplot(212)\n",
+    "    fig = plot_pacf(ts_diff, lags=40, ax=ax2)\n",
+    "    plt.show()\n",
+    "\n",
+    "# --- FUNCIÓN AGREGADA ---\n",
+    "def plot_predictions(test_series, predictions):\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    plt.plot(test_series.index, test_series, label='Valores Reales')\n",
+    "    plt.plot(test_series.index, predictions, color='red', label='Predicciones ARIMA')\n",
+    "    plt.title('Predicciones vs. Valores Reales')\n",
+    "    plt.xlabel('Fecha')\n",
+    "    plt.ylabel('Número de Asientos')\n",
+    "    plt.legend()\n",
+    "    plt.show()"
+   ]
   }
  ],
  "metadata": {
@@ -309,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
